--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-transformer-remark": "^2.3.12",
     "gatsby-transformer-sharp": "^2.1.19",
     "lodash": "^4.17.11",
+    "netlify-cms": "^2.10.45",
     "netlify-cms-app": "^2.10.1",
     "prismjs": "^1.16.0",
     "prop-types": "^15.7.2",
